; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/mediatek/extr_mtk-aes.c_mtk_aes_gcm_tag_verify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/mediatek/extr_mtk-aes.c_mtk_aes_gcm_tag_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_cryp = type { %struct.TYPE_4__** }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.mtk_aes_rec = type { i64 }

@AES_AUTH_TAG_ERR = common dso_local global i32 0, align 4
@EBADMSG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtk_cryp*, %struct.mtk_aes_rec*)* @mtk_aes_gcm_tag_verify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_aes_gcm_tag_verify(%struct.mtk_cryp* %0, %struct.mtk_aes_rec* %1) #0 {
  %3 = alloca %struct.mtk_cryp*, align 8
  %4 = alloca %struct.mtk_aes_rec*, align 8
  %5 = alloca i32, align 4
  store %struct.mtk_cryp* %0, %struct.mtk_cryp** %3, align 8
  store %struct.mtk_aes_rec* %1, %struct.mtk_aes_rec** %4, align 8
  %6 = load %struct.mtk_cryp*, %struct.mtk_cryp** %3, align 8
  %7 = getelementptr inbounds %struct.mtk_cryp, %struct.mtk_cryp* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %7, align 8
  %9 = load %struct.mtk_aes_rec*, %struct.mtk_aes_rec** %4, align 8
  %10 = getelementptr inbounds %struct.mtk_aes_rec, %struct.mtk_aes_rec* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %8, i64 %11
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %5, align 4
  %18 = load %struct.mtk_cryp*, %struct.mtk_cryp** %3, align 8
  %19 = load %struct.mtk_aes_rec*, %struct.mtk_aes_rec** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @AES_AUTH_TAG_ERR, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %2
  %25 = load i32, i32* @EBADMSG, align 4
  %26 = sub nsw i32 0, %25
  br label %28

27:                                               ; preds = %2
  br label %28

28:                                               ; preds = %27, %24
  %29 = phi i32 [ %26, %24 ], [ 0, %27 ]
  %30 = call i32 @mtk_aes_complete(%struct.mtk_cryp* %18, %struct.mtk_aes_rec* %19, i32 %29)
  ret i32 %30
}

declare dso_local i32 @mtk_aes_complete(%struct.mtk_cryp*, %struct.mtk_aes_rec*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
